--- a/search.html
+++ b/search.html
@@ -6,7 +6,7 @@
 					gcse.src   = 'https://cse.google.com/cse.js?cx=' + cx;
 					var s = document.getElementsByTagName('script')[0];
 					s.parentNode.insertBefore(gcse, s);
-				})();</script><gcse:searchresults-only></gcse:searchresults-only></div></div></main><footer class="footer"><div class="footer__copyright">Powered by <a href="https://getpublii.com" target="_blank" rel="nofollow noopener">Publii</a></div></footer><script>window.publiiThemeMenuConfig = {    
+				})();</script><gcse:searchresults-only></gcse:searchresults-only></div></div></main><footer class="footer"><div class="footer__copyright">© CSClubAuckland</div></footer><script>window.publiiThemeMenuConfig = {    
       mobileMenuMode: 'sidebar',
       animationSpeed: 300,
       submenuWidth: 'auto',
